--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css");
+
+.ng-valid[required], 
+.ng-valid.required {
+    border-left: 5px solid green;
+}
+
+.ng-invalid:not(form, .ng-untouched) {
+    border-left: 5px solid red;
+}
